updated launch links, fixed spacing for responsiveness, shadowed and consistent buttons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2671,7 +2671,8 @@ input[type="button"],
 	font-weight: 700;
 	height: 2.75em;
 	line-height: 2.75em;
-	padding: 0 1em ; 
+	width: 25em;
+	padding: 0 4em ; 
 	text-align: center;
 	text-decoration: none;
 	white-space: nowrap;
@@ -2732,7 +2733,7 @@ input[type="button"],
 		input[type="button"].alt,
 		.button.alt {
 			background-color: transparent;
-			box-shadow: inset 0 0 0 2px #216497;
+			box-shadow: inset 0 2px 8px 2px #216497;
 			color: #216497 !important;
 		}
 
@@ -2741,7 +2742,7 @@ input[type="button"],
 			input[type="button"].alt:hover,
 			.button.alt:hover {
 				background-color: #9FD3FA;
-				color: #777 !important;
+				color: #1A181B !important;
 			}
 
 			input[type="submit"].alt:active,
@@ -2913,7 +2914,7 @@ input[type="button"],
 		}
 
 			#header > footer .icons {
-				margin: 0;
+				margin: -2em 0 0 0;
 			}
 
 				#header > footer .icons li a {
@@ -3176,13 +3177,13 @@ input[type="button"],
 				top: 0;
 				width: 100%;
 				z-index: 10001;
-				background: #FCF0A6;
+				background: #1A181B;
 				color: #fff;
 				min-width: 320px;
 			}
 
 				#titleBar .title {
-					color: #216497;
+					color: #1A181B;
 					display: block;
 					font-weight: 700;
 					height: 44px;
@@ -3452,11 +3453,13 @@ input[type="button"],
 
 		/* Button */
 
-			input[type="submit"],
-			input[type="reset"],
-			input[type="button"],
-			.button {
-				padding: 0;
-			}
+		input[type="submit"],
+		input[type="reset"],
+		input[type="button"],
+		.button {
+			padding: 0 4em;
+			width: 15em;
+			text-align: center;
+		}
 
 	}
